--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@ b {
         style="height:100%;width: 100%;"
       >
         <use id="rex" xlink:href="../ikons/rex.svg#ikon"
-         transform="matrix(1.5 0 0 1.5 100 174)"/>
-        <ellipse cx="100" cy="300" rx="150" ry="22"
+         transform="matrix(1.55 0 0 1.55 100 180)"/>
+        <ellipse cx="100" cy="310" rx="150" ry="22"
          fill="var(--dark)"/>
       </svg>
     </div>
@@ -302,7 +302,8 @@ b {
       </pre>
   </div>
   
-  <br><div class="qr signature d-rip" style="
+  <br>
+  <div class="qr signature d-rip" style="
     border-top: 1px;
     border-top-style: solid;
     border-color: var(--darkness);
@@ -311,6 +312,7 @@ b {
     --hi-color: var(--lightness);
     --frame-width: 400px;
   ">~queviva</div>
+
 </div>
 </body>
 
