a little more description

--- a/index.html
+++ b/index.html
@@ -276,8 +276,9 @@ b {
       <br><br>
       mouse-over, or touch, the image to make it
       seeth with color - you might have to try
-      more than once; as per yoosh, the color
-      changes on scroll
+      more than once since the number and size of
+      streaks may vary widely; as per yoosh,
+      the color changes on scroll
   </div>
   
   <hr>
@@ -300,6 +301,15 @@ b {
 
 }
       </pre>
+  </div>
+  
+  <br>
+  <div class="qr">
+     the <i>&#8209;&#8209;drip&#8209;size</i>
+     and <i>&#8209;&#8209;drip&#8209;length</i>
+     variables are simply starting points - the
+     actual size and length of each drips varies
+     ofcourse
   </div>
   
   <br>
