--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ b {
      the <i>&#8209;&#8209;drip&#8209;size</i>
      and <i>&#8209;&#8209;drip&#8209;length</i>
      variables are simply starting points - the
-     actual size and length of each drips varies
+     actual size and length of each drip varies
      ofcourse
   </div>
   
