maybe hyphens aren't werking on mobile without this?

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ body {
     background-color: var(--back-color);
     font-size: 22px;
     text-align: justify;
+    -webkit-hyphens: auto;
     hyphens: auto;
 }
 
